# link-garden

./: .gitignore  06-CODEX-REVIEW.md  07-WEB-SAFETY.md  09-POLISH.md  INSTRUCTIONS-3.md  INSTRUCTIONS.md  README.md  SECURITY.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
codex_instructions/: 02-NEXT-LEAP.md  04-SECURITY.md  05-ABOUT-DOCS-SITE.md  06-TRUST-HARDENING.md  08-GUARDRAILS.md  CHANGELOG.md
docs/: design.md  hub.md  recovery.md  self-hosting.md
examples/: demo_seed.py  sample_bookmark.md
link_garden/: __init__.py  backup.py  bookmarks.py  chrome_import.py  cli.py  config.py  doctor.py  enrich.py  export.py  hub.py  index.py  io_utils.py  model.py  security.py  storage.py  utils.py
link_garden/web/: __init__.py  app.py  sanitize.py  theme.py
link_garden/web/static/: theme.css
link_garden/web/templates/: base.html  detail.html  duplicates.html  index.html
site/: README.md  index.html  styles.css
site/about/: index.html
site/about/architecture/: index.html
site/about/philosophy/: index.html
site/about/privacy/: index.html
site/docs/: index.html
site/docs/exporting/: index.html
site/docs/importing-chrome/: index.html
site/docs/organizing-and-frontmatter/: index.html
site/docs/quickstart/: index.html
site/docs/security/: index.html
site/docs/self-hosting/: index.html
site/docs/serving/: index.html
site/docs/troubleshooting/: index.html
tests/: test_atomic_write.py  test_backup.py  test_chrome_import.py  test_cli_curation.py  test_cli_errors.py  test_doctor.py  test_enrich.py  test_index.py  test_list_output.py  test_search_index.py  test_security_visibility.py  test_serve_security.py  test_theme.py  test_trust_hardening.py  test_utils.py  test_watch.py  test_web_capture.py  test_web_safety.py  test_web_sanitize.py  test_web_write.py
ui/: theme.yaml
