[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "link-garden"
version = "0.1.0"
description = "Local-first bookmark + notes knowledge garden"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
link-garden = "link_garden.cli:main"

[tool.setuptools.packages.find]
include = ["link_garden*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
